k8s/overlays/production/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:$AWS_ACCOUNT_ID:certificate/50e92976-2a5b-4e76-9020-07197acbe5a0
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/security-groups: sg-0dd2aef6fd82803e5
    kubernetes.io/ingress.class: alb
  name: ingress
spec:
  rules:
    - host: $HTTP_HOST
      http:
        paths:
          - path: /*
            backend:
              serviceName: web
              servicePort: 80
